K8S/py-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: py-app
  template:
    metadata:
      labels:
        app: py-app
    spec:
      containers:
      - name: py-app
        image: gcr.io/ali-marwan-project/py-app
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
