K8S/svc-py-app.yml
apiVersion: v1
kind: Service
metadata:
  name: my-loadbalancer-service
spec:
  selector:
    app: py-app
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  type: LoadBalancer
